--- a/404.md
+++ b/404.md
@@ -4,7 +4,7 @@ read_time: false
 comments: false
 share: false
 title: <br><br><br><br><br><br>Page not found.
-permalink: /404.md
+permalink: /404.html
 header:
   overlay_color: "#000"
   overlay_filter: "0.5"
