--- a/404.md
+++ b/404.md
@@ -3,13 +3,12 @@ layout: splash
 read_time: false
 comments: false
 share: false
-title: <br><br><br><br><br><br>Page not found.
+title: <br><br><br>Page not found.
 permalink: /404.html
 header:
   overlay_color: "#000"
   overlay_filter: "0.5"
   overlay_image: /assets/images/trinity.jpg
-  cta_url: "#featured"
 ---
 
 Page not found. [Click here](/) to go back to home.
