--- a/404.md
+++ b/404.md
@@ -11,6 +11,6 @@ header:
   overlay_image: /assets/images/trinity.jpg
 ---
 
-Page not found. [Click here](/) to go back to home.
+[Click here](/) to go back to home.
 
 
